# ai_search_demo

./: .gitignore  Cargo.toml  README.md  config.toml  demo.sh  interactive_demo.sh  manual_test.txt  test_create.txt  test_debounce.sh  test_dedup.sh  test_improved_debounce.sh  test_initial_scan.sh  verify_fix.sh
cache/: db  snap.0000000000000929  snap.0000000000000C08  snap.0000000000000E84  snap.0000000000001560
demo_docs/: ai_intro.txt  deep_learning.txt  ml_guide.txt
docs/: test1.txt  test2.txt
examples/: test_api.rs  test_engine.rs  test_query.rs
src/: ai.rs  cache.rs  config.rs  extract.rs  indexer.rs  lib.rs  main.rs  models.rs  registry.rs  search.rs
src/api/: mod.rs  request.rs  response.rs
src/engine/: builder.rs  core.rs  mod.rs
src/query/: filter.rs  mod.rs  parser.rs  types.rs
src/schema/: document.rs  fields.rs  mod.rs
storage/: .managed.json  meta.json
testTexts/: long_test.txt  no_sentences.txt  test.txt
test_docs/: ai_doc.txt  ml_doc.txt
